# scmisc-py

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
scmisc/: __init__.py  _data.py  _doublet.py  _io.py  _plot.py  _tools.py  _utils.py
scmisc/atac/: _peaks.py
scmisc/datasets/: 10x_doublets.csv
scmisc/plot/: _daf.py  _model.py  _pca.py  _scatter.py
scmisc/plotting/: __init__.py  _daf.py  _model.py  _scatter.py
scmisc/sparse/: __init__.py  _sparse.py
scmisc/tools/: __init__.py
src/scmisc/: __init__.py  _doublet.py  _tools.py  _utils.py
src/scmisc/atac/: __init__.py  _peaks.py
src/scmisc/plotting/: __init__.py  _matrix.py  _model.py  _pca.py  _scatter.py
src/scmisc/tools/: __init__.py  _cluster.py  _pseudobulk.py  _sample.py
src/scmisc/utils/: __init__.py  _stat.py
tests/: test_pseudobulk.py
